[148] [NTP-Real-Box]: Fix overflow from contextual action menu.
Original change's description:
> [NTP-Real-Box]: Fix overflow from contextual action menu.
> 
> https://screencast.googleplex.com/cast/NTI3NTgxNzE4ODc4NjE3NnxhYzcwNmFmMC0wZA
> 
> Fixed: b:500817220
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7740659
> Commit-Queue: Jilin Yang <jilinyang@google.com>
> Cr-Commit-Position: refs/heads/main@{#1611913}

Bug: 502263865
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7762848
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Bot-Commit: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7778@{#633}
Cr-Branched-From: 77f495ee216d4c3cc784d33658bad4778c0680ee-refs/heads/main@{#1610480}

--- a/ui/webui/resources/cr_components/composebox/contextual_action_menu.css
+++ b/ui/webui/resources/cr_components/composebox/contextual_action_menu.css
@@ -11,7 +11,6 @@
 
 #menu {
   --color-sys-divider: var(--color-composebox-file-carousel-divider);
-  --cr-action-menu-overflow: visible;
   --cr-menu-background-color: var(--color-composebox-background);
   --cr-menu-border-radius: 16px;
   --cr-primary-text-color: var(--color-composebox-file-chip-text);
